--- a/app/package.json
+++ b/app/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.20",
-    "@types/node": "^20.8.10",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/express": "4.17.20",
+    "@types/node": "20.8.10",
+    "ts-node": "10.9.1",
+    "typescript": "5.2.2"
   }
 }
